--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.5.24", features = ["derive"] }
 epub = "2.1.2"
 tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread"] }
 tokio-macros = "2.5.0"
+scraper = "0.22.0"
